--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background: url('https://upload.wikimedia.org/wikipedia/en/1/1d/UEFA_Euro_2024_logo.png') no-repeat center center fixed;
+    background: url('https://editorial.uefa.com/resources/026e-13685607e1fa-a03dcdd35e00-1000/format/wide1/brand2024.png') no-repeat center center fixed;
     background-size: cover;
-    color: #ffffff; /* Texte blanc pour contraste */
+    color: #143CDB; /* Texte blanc pour contraste */
   }
   
   h1 {
