Patch version iphone et ordi

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ body {
   /* Media Queries pour l'adaptation mobile */
   @media (max-width: 768px) {
     body {
-        background-size: contain; /* Ajuste l'image de fond pour s'adapter à la taille de l'écran */
+        background-size: 768px; /* Ajuste l'image de fond pour s'adapter à la taille de l'écran */
       }
     #colorful-title {
       margin-left: 1rem;
