--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,8 @@ body {
   /* Media Queries pour l'adaptation mobile */
   @media (max-width: 768px) {
     body {
-        background-size: 768px; /* Ajuste l'image de fond pour s'adapter à la taille de l'écran */
+        background: url('https://img.diverto.tv/sites/default/files/new/image/cover/f/3/2/img-811696703?sezmlv') no-repeat center center fixed;
+        
       }
     #colorful-title {
       margin-left: 1rem;
